@@ -1,6 +1,7 @@
 package dk.kb.datahandler.facade;
 
 import java.io.BufferedInputStream;
+import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.URL;
@@ -10,6 +11,9 @@ import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
+
+
+import org.apache.http.client.utils.URIBuilder;
 
 import dk.kb.datahandler.oai.OaiResponseFiltering;
 import dk.kb.util.webservice.exception.InternalServiceException;
@@ -21,6 +25,7 @@ import org.slf4j.LoggerFactory;
 import org.w3c.dom.Document;
 import org.w3c.dom.Node;
 
+
 import dk.kb.datahandler.config.ServiceConfig;
 import dk.kb.datahandler.model.v1.OaiJobDto;
 import dk.kb.datahandler.model.v1.OaiTargetDto;
@@ -30,7 +35,6 @@ import dk.kb.datahandler.oai.OaiRecord;
 import dk.kb.datahandler.oai.OaiResponse;
 import dk.kb.datahandler.oai.OaiTargetJob;
 import dk.kb.datahandler.util.HarvestTimeUtil;
-import dk.kb.present.client.v1.DsPresentApi;
 import dk.kb.datahandler.util.HttpPostUtil;
 import dk.kb.storage.client.v1.DsStorageApi;
 import dk.kb.storage.model.v1.DsRecordDto;
@@ -42,8 +46,7 @@ public class DsDatahandlerFacade {
     private static final Logger log = LoggerFactory.getLogger(DsDatahandlerFacade.class);
     
     private static DsStorageApi storageClient;  
-    private static DsPresentApi presentClient;
-
+    
     /**
      * Ingest records directly into ds-storage from a zip-file containing multiple files that each is an xml-file with a single record
      *  
@@ -99,37 +102,46 @@ public class DsDatahandlerFacade {
      *  1) Call ds-present that will extract records from ds-storage and xslt transform them into solr-add documents json
      *  2) Send the input stream with json documents directly to solr so it is not kept in memory.
      *  
-     * @param dsPresentCollectionName This collectionName must be define on the ds-present server.
+     * @param origin. Origin must be define on the ds-present server.
      * @exception Will throw exception is the dsPresentCollectionName is not known, or if server communication fails.
      */    
-    public static void indexSolr(String dsPresentCollectionName)  throws Exception{
+    public static void indexSolr(String origin)  throws Exception{
    
         //There is no way to validate dsPresentCollectionName exists unless calling again. The input stream is given directly to solr        
         
         //Below two lines would work if client was generated with streaming Api
         //DsPresentApi presentClient = getDsPresentApiClient();
         //StreamingOutput so = presentClient.getRecords(oaiTarget, 0L, -1L, "SolrJSON");
-        
-        String presentUrl =ServiceConfig.getDsPresentUrl()+"/records?&maxRecords=100000&format=SolrJSON&collection="+dsPresentCollectionName;
-        URL presentURL = new URL(presentUrl);
-        String solrUrl = ServiceConfig.getSolrUrl();        
-        URL solrURL = new URL(solrUrl);
-        
-        HttpURLConnection httpURLConnection = (HttpURLConnection) presentURL.openConnection();        
+                
+               
+         URL presentUrl= new URIBuilder(ServiceConfig.getDsPresentUrl()+"/records")                           
+                            //.setPath("records") //This will set whole path, needs the /records above                           
+                           .setParameter("maxRecords", "100000")
+                           .setParameter("format", "SolrJSON")
+                           .setParameter("collection", origin)
+                           .build().toURL();
+                        
+         log.info("present URL protocol:"+presentUrl.getProtocol());
+        //String presentUrl =ServiceConfig.getDsPresentUrl()+"/records?&maxRecords=100000&format=SolrJSON&collection="+origin;
+                                
+        URL solrUpdateUrl=new URIBuilder(ServiceConfig.getSolrUrl())
+                          .setParameter("commit", "true")
+                          .build().toURL();      
+                                 
+        HttpURLConnection httpURLConnection = (HttpURLConnection) presentUrl.openConnection();        
         httpURLConnection.setRequestMethod("GET");        
         try (InputStream inputStream = httpURLConnection.getInputStream()){                 
             //Give input stream to the POST request.        
-            HttpURLConnection solrServerConnection = (HttpURLConnection) solrURL.openConnection(); 
-            solrServerConnection.setRequestProperty("Content-Type", "application/json");
-            String solrResponse = HttpPostUtil.callPost(solrServerConnection, inputStream);
+            HttpURLConnection solrServerConnection = (HttpURLConnection) solrUpdateUrl.openConnection();             
+            String solrResponse = HttpPostUtil.callPost(solrServerConnection, inputStream , "application/json");
             log.info("Response from solr:"+solrResponse); //Example: {  "responseHeader":{    "rf":1,    "status":0,    "QTime":1348}}           
 
             if (solrResponse.indexOf("\"status\":0") < 0) {
-                throw new Exception ("Unexpected status from solr:"+solrResponse);
+                throw new IOException ("Unexpected status from solr:"+solrResponse);
             }            
         }
         catch(Exception e) { //
-            log.error("Error calling ds-present or solr.",e.getMessage());
+            log.error("Error calling ds-present or solr.",e);
             throw new InternalServiceException("Error calling ds-present or solr");
         }
                       
@@ -321,20 +333,7 @@ public class DsDatahandlerFacade {
         storageClient = new DsStorageClient(dsLicenseUrl);               
         return storageClient;
       }
-    
-  
-    private static DsPresentApi getDsPresentApiClient() {       
-        if (presentClient!= null) {
-          return presentClient;
-        }
-          
-       // String dsPresentUrl = ServiceConfig.getDsStorageUrl();                                
-        String dsPresentUrl = "http://devel11.statsbiblioteket.dk:10001/ds-storage/";
-        storageClient = new DsStorageClient(dsPresentUrl);               
-        return presentClient;
-      }
-    
-    
+           
 
     private static synchronized void validateNotAlreadyRunning(String oaiTargetName) {
         boolean alreadyRunning= OaiJobCache.isJobRunningForTarget(oaiTargetName);        
